# pilot

./: .gitignore  .goreleaser.yml  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md  REWRITE.md  ROADMAP.md  run.sh
.claude/: settings.local.json
.config/: nextest.toml
.github/: release-setup.yml
.github/workflows/: ci.yml  release.yml
crates/agents/: Cargo.toml
crates/agents/src/: agent.rs  lib.rs  session_wrapper.rs
crates/agents/tests/: agents.rs
crates/app/: Cargo.toml
crates/app/src/: action.rs  agent_state.rs  app.rs  claude_hooks.rs  command.rs  input.rs  keymap.rs  keys.rs  main.rs  monitor.rs  nav.rs  notify.rs  pane.rs  picker.rs  reduce.rs  session_manager.rs  state.rs  terminal_manager.rs  ui.rs
crates/app/src/actions/: events.rs  mod.rs  pr.rs  session.rs
crates/auth/: Cargo.toml
crates/auth/src/: chain.rs  credential.rs  lib.rs
crates/auth/src/providers/: command.rs  env.rs  mod.rs  static.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  config.rs  issue_links.rs  lib.rs  paths.rs  provider.rs  scope.rs  session.rs  session_key.rs  slug.rs  task.rs  time.rs  workspace.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs  protocol.rs
crates/events/: Cargo.toml
crates/events/src/: bus.rs  lib.rs  types.rs
crates/gh-provider/: Cargo.toml
crates/gh-provider/src/: client.rs  graphql.rs  lib.rs  poller.rs  rate_budget.rs
crates/git-ops/: Cargo.toml
crates/git-ops/src/: lib.rs
crates/git-ops/tests/: mounts.rs  scripts.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: channel.rs  lib.rs  proxy.rs  socket.rs  transport.rs
crates/ipc/tests/: framing_prop.rs  protocol.rs
crates/libghostty-vt/: Cargo.toml
crates/libghostty-vt-sys/: Cargo.toml  build.rs
crates/libghostty-vt-sys/src/: bindings.rs  lib.rs
crates/libghostty-vt/src/: render.rs
crates/libghostty-vt/src/kitty/: graphics.rs
crates/libghostty-vt/tests/: scroll_repro.rs
crates/linear-provider/: Cargo.toml
crates/linear-provider/src/: graphql.rs  lib.rs
crates/linear-provider/tests/: linear.rs
crates/llm-proxy/: Cargo.toml
crates/llm-proxy/src/: lib.rs  pricing.rs  server.rs
crates/llm-proxy/tests/: pricing.rs  proxy_forward.rs  records.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: agent_runs.rs  agent_spawn.rs  agent_stream.rs  api_gateway.rs  auth.rs  lib.rs  lifecycle.rs  polling.rs  pty.rs  socket_service.rs  spawn_handler.rs
crates/server/src/backend/: mock.rs  mod.rs  raw_pty.rs  tmux.rs
crates/server/tests/: agent_runs.rs  agent_spawn.rs  agent_stream.rs  api_gateway.rs  backend.rs  migration_from_v1.rs  polling.rs  pty.rs  replay.rs  serve_loop.rs  socket_lifecycle.rs  spawn_handler.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  mock.rs  sqlite.rs  traits.rs
crates/tui/: Cargo.toml
crates/tui-core/: Cargo.toml
crates/tui-core/src/: agent_attention.rs  confirm_latch.rs  intent.rs  lib.rs  platform.rs  prompts.rs  util.rs
crates/tui-term/: Cargo.toml
crates/tui-term/src/: ghostty_widget.rs  lib.rs  local.rs  remote.rs  session.rs
crates/tui/src/: agent_attention.rs  app.rs  confirm_latch.rs  editors.rs  intent.rs  latch_set.rs  layout.rs  lib.rs  main.rs  pane.rs  pilot_theme.rs  platform.rs  setup.rs  setup_flow.rs  test_mode.rs  theme.rs  tree.rs
crates/tui/src/components/: activity_feed.rs  comment_render.rs  icons.rs  mod.rs  right_pane.rs  root.rs  sidebar.rs  table.rs  task_label.rs  terminal_stack.rs  visible_rows.rs  workspace_row.rs
crates/tui/src/realm/: MIGRATION.md  keymap.rs  layout.rs  mod.rs  model.rs  setup_ctx.rs  status_ctx.rs  user_event.rs
crates/tui/src/realm/components/: choice.rs  confirm.rs  error.rs  footer.rs  help.rs  input.rs  loading.rs  mod.rs  polling.rs  right.rs  sidebar.rs  splash.rs  terminals.rs  textarea.rs
crates/tui/tests/: app_loop.rs  component_tree.rs  model_orchestrator.rs  overlays.rs  right_pane.rs  setup_flow.rs  sidebar.rs  snapshots.rs  terminal_stack.rs
crates/tui/tests/snapshots/: snapshots__sidebar_empty.snap  snapshots__sidebar_focused_3_sessions.snap  snapshots__sidebar_unfocused_1_session.snap
docs/: UX.md
scripts/: bootstrap.sh
scripts/examples/: rust-cleanup.sh
v2/: Cargo.toml  DESIGN.md
v2/crates/agents/: Cargo.toml
v2/crates/agents/src/: agent.rs  lib.rs
v2/crates/agents/tests/: agents.rs
v2/crates/daemon/: Cargo.toml
v2/crates/daemon/src/: agent_spawn.rs  lib.rs  pty.rs
v2/crates/daemon/tests/: agent_spawn.rs  pty.rs  replay.rs  serve_loop.rs
v2/crates/ipc/: Cargo.toml
v2/crates/ipc/src/: channel.rs  lib.rs  socket.rs
v2/crates/ipc/tests/: framing_prop.rs  protocol.rs
v2/crates/linear-provider/src/: graphql.rs  lib.rs
v2/crates/linear-provider/tests/: linear.rs
v2/crates/llm-proxy/: Cargo.toml
v2/crates/llm-proxy/src/: lib.rs  pricing.rs  server.rs
v2/crates/llm-proxy/tests/: pricing.rs  proxy_forward.rs  records.rs
v2/crates/tui/: Cargo.toml
v2/crates/tui/src/: component.rs  lib.rs  main.rs  tree.rs
v2/crates/tui/src/components/: mod.rs  overlays.rs  right_pane.rs  sidebar.rs  terminal_stack.rs
v2/crates/tui/tests/: component_tree.rs  overlays.rs  right_pane.rs  sidebar.rs  snapshots.rs  terminal_stack.rs
v2/crates/tui/tests/snapshots/: snapshots__sidebar_empty.snap  snapshots__sidebar_focused_3_sessions.snap  snapshots__sidebar_unfocused_1_session.snap
