[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/auth",
    "crates/events",
    "crates/store",
    "crates/config",
    "crates/git-ops",
    "crates/gh-provider",
    "crates/tui-term",
    "crates/ipc",
    "crates/server",
    "crates/agents",
    "crates/linear-provider",
    "crates/llm-proxy",
    "crates/tui",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# ── Shared library crates ──────────────────────────────────────────────
pilot-core        = { path = "crates/core" }
pilot-auth        = { path = "crates/auth" }
pilot-events      = { path = "crates/events" }
pilot-store       = { path = "crates/store" }
pilot-config      = { path = "crates/config" }
pilot-git-ops     = { path = "crates/git-ops" }
pilot-gh          = { path = "crates/gh-provider" }
pilot-tui-term    = { path = "crates/tui-term" }

# ── v2 crates ──────────────────────────────────────────────────────────
pilot-v2-ipc       = { path = "crates/ipc" }
pilot-v2-agents    = { path = "crates/agents" }
pilot-v2-llm-proxy = { path = "crates/llm-proxy" }

# ── Third-party ────────────────────────────────────────────────────────
tokio              = { version = "1", features = ["full"] }
futures            = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_yaml         = "0.9"
bincode            = "1.3"
thiserror          = "2"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm          = { version = "0.29", features = ["event-stream"] }
ratatui            = "0.30"
tui-markdown       = "0.3"
chrono             = { version = "0.4", features = ["serde"] }
portable-pty       = "0.8"
rusqlite           = { version = "0.32", features = ["bundled"] }
parking_lot        = "0.12"
octocrab           = "0.44"
