[package]
name = "pilot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pilot"
path = "src/main.rs"

[dependencies]
pilot-auth = { workspace = true }
pilot-config = { workspace = true }
pilot-core = { workspace = true }
pilot-events = { workspace = true }
pilot-store = { workspace = true }
pilot-tui-term = { workspace = true }
pilot-gh = { workspace = true }
pilot-git-ops = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
tui-markdown = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
