[package]
name = "pilot-config"
version.workspace = true
edition.workspace = true

[dependencies]
pilot-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
humantime-serde = "1"
