[package]
name = "pilot-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pilot-daemon"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
