[package]
name = "pilot-daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "pilot_daemon"
path = "src/lib.rs"

[dependencies]
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
