[package]
name = "pilot-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pilot-core          = { workspace = true }
serde               = { workspace = true }
bincode             = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true }
chrono              = { workspace = true }
tracing             = { workspace = true }
# Wire types for Event::ProxyRecord use Duration with humantime
# serialization. Lives here (not pulled in via pilot-llm-proxy) so
# the protocol crate doesn't depend on the proxy implementation.
humantime-serde     = "1"

[dev-dependencies]
tokio      = { workspace = true, features = ["full", "test-util"] }
proptest   = "1"

[lints]
workspace = true
