[package]
name = "libghostty-vt-sys"
description = "Raw FFI bindings for libghostty-vt, the Ghostty terminal emulation library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
links = "ghostty-vt"
build = "build.rs"

# bindgen-generated bindings.rs carries the upstream C doc comments
# verbatim. Rustdoc tries to interpret their indented prose blocks as
# Rust code samples and fails to compile them. The comments have no
# runtime contract to verify, so we just opt the crate out of doctest
# extraction — same spirit as the `lints.rust = allow` block below.
[lib]
doctest = false

[features]
default = ["vendored"]
vendored = []
bindgen-tool = ["dep:bindgen", "dep:libc", "dep:heck"]
kitty-graphics = []

[dependencies]
bindgen = {version = "0.72.1", optional = true}
libc = {version = "0.2", optional = true}
heck = {version = "0.5", optional = true}

[build-dependencies]

[[bin]]
name = "gen-bindings"
path = "tools/gen_bindings.rs"
required-features = ["bindgen-tool"]

# Vendored upstream crate — don't enforce pilot's lint policy here.
[lints.rust]
warnings = "allow"

[lints.clippy]
all = "allow"
correctness = "allow"
style = "allow"
complexity = "allow"
perf = "allow"
suspicious = "allow"
