[package]
name = "pilot-linear"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pilot-core = { workspace = true }
serde      = { workspace = true }
serde_json = "1"
tokio      = { workspace = true }
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
bytes          = "1"
hyper          = { version = "1", features = ["server", "http1"] }
hyper-util     = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
tokio          = { workspace = true, features = ["full", "test-util"] }
