[package]
name = "pilot-llm-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pilot-core       = { workspace = true }
serde            = { workspace = true }
serde_json       = "1"
tokio            = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
humantime-serde  = "1"

# HTTP server: hyper 1.x + hyper-util for the listener.
hyper            = { version = "1", features = ["server", "http1"] }
hyper-util       = { version = "0.1", features = ["server", "server-auto", "tokio", "service"] }
http-body-util   = "0.1"
bytes            = "1"

# Upstream HTTP client — reqwest handles TLS + redirect + keep-alive.
reqwest          = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

[dev-dependencies]
bincode          = "1.3"
# Mock upstream in tests reuses the same hyper/reqwest stack as the
# server. Listed here so the lib stays slim at build time.
tokio            = { workspace = true, features = ["full", "test-util"] }
