[package]
name = "pilot-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pilot-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
