[package]
name = "pilot-tui-term"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui = { workspace = true }
portable-pty = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
libghostty-vt = { path = "/Users/antoine/Development/libghostty-rs/crates/libghostty-vt" }
