[package]
name = "pilot-tui"
description = "A reactive PR inbox in your terminal."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[lib]
name = "pilot_tui"
path = "src/lib.rs"

[[bin]]
name = "pilot"
path = "src/main.rs"

[dev-dependencies]
# Golden-snapshot testing. Use `cargo insta review` to accept
# intentional render changes; otherwise CI catches regressions.
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

[dependencies]
pilot-core       = { workspace = true }
pilot-auth       = { workspace = true }
pilot-config     = { workspace = true }
pilot-store      = { workspace = true }
pilot-gh         = { workspace = true }
pilot-linear     = { path = "../linear-provider" }
pilot-tui-term   = { workspace = true }
tuirealm         = { workspace = true }
libghostty-vt    = { workspace = true }
pilot-ipc     = { workspace = true }
pilot-agents  = { workspace = true }
pilot-server  = { path = "../server" }

tokio            = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm        = { workspace = true }
ratatui          = { workspace = true }
chrono           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
serde_yaml       = { workspace = true }
futures-util     = "0.3"
tempfile         = "3"
which            = "6"
uuid             = { version = "1", features = ["v4"] }
libc             = "0.2"
