[package]
name = "pilot-v2-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pilot-core       = { workspace = true }
pilot-auth       = { workspace = true }
pilot-events     = { workspace = true }
pilot-store      = { workspace = true }
pilot-config     = { workspace = true }
pilot-gh         = { workspace = true }
pilot-git-ops    = { workspace = true }
pilot-tui-term   = { workspace = true }
pilot-v2-ipc     = { workspace = true }
pilot-v2-agents  = { workspace = true }

tokio            = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
chrono           = { workspace = true }
