[package]
name = "pilot-v2-llm-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pilot-core       = { workspace = true }
serde            = { workspace = true }
serde_json       = "1"
tokio            = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
humantime-serde  = "1"
