[package]
name = "pilot-v2-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "pilot_v2_tui"
path = "src/lib.rs"

[[bin]]
name = "pilot"
path = "src/main.rs"

[dev-dependencies]
# Golden-snapshot testing. Use `cargo insta review` to accept
# intentional render changes; otherwise CI catches regressions.
insta = { version = "1", features = ["yaml"] }

[dependencies]
pilot-core       = { workspace = true }
pilot-config     = { workspace = true }
pilot-tui-term   = { workspace = true }
pilot-v2-ipc     = { workspace = true }
pilot-v2-agents  = { workspace = true }
pilot-v2-daemon  = { path = "../daemon" }

tokio            = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm        = { workspace = true }
ratatui          = { workspace = true }
chrono           = { workspace = true }
